# back-end-boilerplate

cargo_workspace/migrations/: 20221226001_photos_table.sql
cargo_workspace/server/: Cargo.toml
cargo_workspace/server/src/filters/app_api/: mutation.rs  query.rs
